# infinite-rl

./: .coveragerc  .gitignore  CLAUDE.md  MANIFEST.in  PROMPT.md  README.md  analyze_success_rate.py  build.out  coverage.xml  curriculum_learning_log.jsonl  download_gguf.py  dry_run_debug.py  main.py  package.json  print_puzzle_prompt.py  pytest.ini  requirements.txt  requirements_dev.txt  setup.py  test_aux_rewards.py  test_one_shot_example.py  test_primary_score_fix.py  test_strict_math.py  test_user_case.py
.github/: copilot-instructions.md
archive_examples/: RUST.md
assets/: puzzles.json
build_src/: .gitignore  build_wasm.sh  dataset.py  puzzle_prompt.py  puzzle_ratings.json  runner.js
build_src/qwen3_embed/: Cargo.toml
build_src/qwen3_embed/src/: main.rs  qwen3.rs
docs/: GRPO_REFACTORING_CLEAN_APPROACH.md  GRPO_REFACTORING_CLEAN_IMPLEMENTATION.md  GRPO_REFACTORING_GUIDE.md  GRPO_REFACTORING_IMPLEMENTATION.md  GRPO_REFACTORING_INDEX.md  GRPO_REFACTORING_QUICK_REFERENCE.md  GRPO_REFACTORING_VISUAL.md  LLM_JUDGE_REWARD_FUNCTION.md  PUZZLE_EXECUTION_OPTIMIZATION.md  REWARD_ORDERING_BUG_FIX.md
emulator/: README.md  __init__.py  advanced_scenarios.py  examples.py  test_all_rewards.py  training_simulator.py
examples/: CPP.md  HTML.md  JAVA.md  JAVASCRIPT.md  MATH.md  PYTHON.md  RUST.md  SUMMARIZATION.md  TYPESCRIPT.md  grpo_training_example.py  reflective_learning_example.py
infinite_rl/: __init__.py  curriculum.py  dynamic_dataset.py  executor.py  generation.py  generator.py  parser.py  prompt_templates.py  (+9 more)
infinite_rl.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
(+131 files in other folders)
