[package]
name = "qwen3_embed"
version = "0.1.13"
edition = "2024"

[dependencies]
clap = { version = "4.0", features = ["derive"] }
anyhow = { version = "1" }
safetensors = { version = "0.7" }
serde_json = { version = "1" }
serde = { version = "1", features = ["derive"] }
# Switched to fancy-regex for WASM compatibility
tokenizers = { version = "0.21.0", default-features = false, features = ["fancy-regex"] }

# Candle is your primary engine for Qwen3 and is pure-Rust compatible
candle-nn = { version = "0.9.1", optional = true }
candle-core = { version = "0.9.1", optional = true }

# Native-only dependencies (Hidden from WASM)
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
tokio = { version = "1.49.0", features = ["full"] }
hf-hub = { version = "0.4.1", default-features = false, optional = true, features = ["ureq"] }
image = { version = "0.25.2" }
ndarray = { version = "0.17", default-features = false }
ort = { version = "=2.0.0-rc.11", default-features = false, features = ["ndarray", "std"] }
intel-mkl-src = { version = "0.8.1", optional = true }
accelerate-src = { version = "0.3.2", optional = true }

# WASM-only dependencies
[target.'cfg(target_arch = "wasm32")'.dependencies]
tokio = { version = "1.49.0", features = ["sync", "macros", "io-util", "rt", "time"] }

[features]
default = ["candle"]
candle = ["dep:candle-core", "dep:candle-nn"]
# Only allow these on native builds
mkl = ["intel-mkl-src", "candle"]
accelerate = ["accelerate-src", "candle"]